--- a/.env
+++ b/.env
@@ -1,34 +1,35 @@
 # Minio
 MINIO_ENDPOINT_URL=minio:9000
-MINIO_ROOT_USER=
-MINIO_ROOT_PASSWORD=
-MINIO_ACCESS_KEY=
-MINIO_SECRET_KEY=
-MINIO_BUCKET_NAME=
+MINIO_ROOT_USER=minio
+MINIO_ROOT_PASSWORD=minio123
+MINIO_ACCESS_KEY=minio
+MINIO_SECRET_KEY=minio123
+MINIO_BUCKET_NAME=warehouse
 
 # MySQL
-MYSQL_HOST=
-MYSQL_PORT=
-MYSQL_DATABASE=
-MYSQL_PASSWORD=
-MYSQL_ROOT_PASSWORD=
-MYSQL_USER=
+MYSQL_HOST=de_mysql
+MYSQL_PORT=3306
+MYSQL_DATABASE=covid_19
+MYSQL_PASSWORD=12335424
+MYSQL_ROOT_PASSWORD=12335424
+MYSQL_USER=root
 
 # PostgreSQL
-POSTGRES_HOST=
-POSTGRES_PORT=
-POSTGRES_DB=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
+POSTGRES_HOST=de_psql
+POSTGRES_PORT=5432
+POSTGRES_DB=covid_19_warehouse
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=12335424
 POSTGRES_HOST_AUTH_METHOD=trust
 
 
 # Dagster
 DAGSTER_PG_HOSTNAME=de_psql
-DAGSTER_PG_USERNAME=
-DAGSTER_PG_PASSWORD=
-DAGSTER_PG_DB=
+DAGSTER_PG_USERNAME=postgres
+DAGSTER_PG_PASSWORD=12335424
+DAGSTER_PG_DB=covid_19_warehouse
 DAGSTER_OVERALL_CONCURRENCY_LIMIT=1
+DAGSTER_HOME=/opt/dagster/dagster_home
 
 
 # Spark
